--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -72,6 +72,33 @@ hr.dots {
   border-width: 0 0 .4em;
   border-style: solid;
   border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="darkcyan" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
-  width: 6em;
+  width: 5em;
   margin-top: 1.5em;
+}
+
+.room-code {
+  background-color: #efefef;
+  border-radius: 3px;
+  padding: 1px 15px;
+  border: 1px solid #dadada;
+  font-size: .9em;
+  margin: auto 4px;
+  color: darkcyan;
+  font-weight: lighter;
+}
+
+.player-card {
+  list-style-type: none;
+  border: 1px solid darkcyan;
+  border-radius: 5px;
+  margin: 1em;
+  padding: 2em 0;
+}
+
+.err-msg {
+  background-color: #e20000;
+  color: white;
+  margin: auto 1em;
+  border-radius: 5px;
+  padding: .4em;
 }
