--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,36 +1,54 @@
+@import 'colors';
+
 * {
-  font-family: 'Zilla Slab';
+  font-family: 'Open Sans';
   box-sizing: border-box;
-  color: #1f1f1f;
+  color: white;
 }
 
-p, span {
-  font-family: 'Open Sans';
+#root {
+  background: linear-gradient(142deg, $pink 25%, $yellow 85%);
+  font-size: 1.2em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  // font-weight: lighter;
+  font-family: 'Poiret One';
+  letter-spacing: 0.1em;
+  font-variant: small-caps;
 }
 
 h1 {
-  ~ p {
+  + p {
     margin-top: -0.4em;
   }
+}
+
+#title {
+  font-weight: 200;
+  font-size: 3em;
+  font-style: italic;
+  text-shadow: 2px 2px 12px rgba(230, 0, 41, 0.8);
 }
 
 .text-center {
   text-align: center;
 }
 
-.vertical-center-container {
+.vertical-center {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
   > * {
     margin-bottom: 15%;
   }
 }
 
-#main {
+.flex-container-col {
   display: flex;
   flex-direction: column;
+}
+
+#main {
   align-items: center;
   > p {
     width: 60%;
@@ -38,12 +56,19 @@ h1 {
 }
 
 .btn {
-  border: 1px solid darkcyan;
+  border: 1px solid white;
   border-radius: 0.3em;
   padding: 0.6em 1.2em;
   text-decoration: none;
-  color: darkcyan;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.15);
+  margin-top: 1em;
+  &:disabled {
+    background-color: rgba(130, 130, 130, 0.78);
+    border: 1px;
+  }
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.20);
+  }
 }
 
 .mobile {
@@ -52,7 +77,8 @@ h1 {
     flex-direction: column;
   }
   input {
-    border: 1px solid orange;
+    border: none;
+    color: #252525;
     border-radius: .4em;
     padding: 0.6em 1.2em;
     font-size: 1em;
@@ -61,35 +87,26 @@ h1 {
   .btn {
     font-size: 1em;
     margin: .5em 1em;
-    background-color: darkcyan;
-    color: white;
   }
 }
 
 hr.dots {
-  $color: darkcyan;
-  color: $color;
+  color: $yellow;
   border-width: 0 0 .4em;
   border-style: solid;
-  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="darkcyan" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
+  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="#ffc86d" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
   width: 5em;
   margin-top: 1.5em;
 }
 
 .room-code {
-  background-color: #efefef;
-  border-radius: 3px;
-  padding: 1px 15px;
-  border: 1px solid #dadada;
-  font-size: .9em;
-  margin: auto 4px;
-  color: darkcyan;
+  color: $yellow;
   font-weight: lighter;
 }
 
 .player-card {
   list-style-type: none;
-  border: 1px solid darkcyan;
+  border: 1px solid white;
   border-radius: 5px;
   margin: 1em;
   padding: 2em 0;
@@ -101,4 +118,12 @@ hr.dots {
   margin: auto 1em;
   border-radius: 5px;
   padding: .4em;
+}
+
+.warning-msg {
+  background-color: #ffeb53;
+  margin: -.3em 1em 0 1em;
+  border-radius: 5px;
+  padding: 3px;
+  color: grey;
 }
