--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,46 +1,64 @@
 * {
-  font-family: 'Zilla Slab';
+  font-family: 'Open Sans';
   box-sizing: border-box;
-  color: #1f1f1f; }
+  color: white; }
 
-p, span {
-  font-family: 'Open Sans'; }
+#root {
+  background: linear-gradient(142deg, #ff5160 25%, #ffc86d 85%);
+  font-size: 1.2em; }
 
-h1 ~ p {
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poiret One';
+  letter-spacing: 0.1em;
+  font-variant: small-caps; }
+
+h1 + p {
   margin-top: -0.4em; }
+
+#title {
+  font-weight: 200;
+  font-size: 3em;
+  font-style: italic;
+  text-shadow: 2px 2px 12px rgba(230, 0, 41, 0.8); }
 
 .text-center {
   text-align: center; }
 
-.vertical-center-container {
+.vertical-center {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   justify-content: space-around; }
-  .vertical-center-container > * {
+  .vertical-center > * {
     margin-bottom: 15%; }
 
-#main {
+.flex-container-col {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; }
+
+#main {
   align-items: center; }
   #main > p {
     width: 60%; }
 
 .btn {
-  border: 1px solid darkcyan;
+  border: 1px solid white;
   border-radius: 0.3em;
   padding: 0.6em 1.2em;
   text-decoration: none;
-  color: darkcyan;
-  background-color: white; }
+  background-color: rgba(255, 255, 255, 0.15);
+  margin-top: 1em; }
+  .btn:disabled {
+    background-color: rgba(130, 130, 130, 0.78);
+    border: 1px; }
+  .btn:hover {
+    background-color: rgba(255, 255, 255, 0.2); }
 
 .mobile form {
   display: flex;
   flex-direction: column; }
 
 .mobile input {
-  border: 1px solid orange;
+  border: none;
+  color: #252525;
   border-radius: .4em;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -48,31 +66,23 @@ h1 ~ p {
 
 .mobile .btn {
   font-size: 1em;
-  margin: .5em 1em;
-  background-color: darkcyan;
-  color: white; }
+  margin: .5em 1em; }
 
 hr.dots {
-  color: darkcyan;
+  color: #ffc86d;
   border-width: 0 0 .4em;
   border-style: solid;
-  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="darkcyan" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
+  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="#ffc86d" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
   width: 5em;
   margin-top: 1.5em; }
 
 .room-code {
-  background-color: #efefef;
-  border-radius: 3px;
-  padding: 1px 15px;
-  border: 1px solid #dadada;
-  font-size: .9em;
-  margin: auto 4px;
-  color: darkcyan;
+  color: #ffc86d;
   font-weight: lighter; }
 
 .player-card {
   list-style-type: none;
-  border: 1px solid darkcyan;
+  border: 1px solid white;
   border-radius: 5px;
   margin: 1em;
   padding: 2em 0; }
@@ -83,3 +93,10 @@ hr.dots {
   margin: auto 1em;
   border-radius: 5px;
   padding: .4em; }
+
+.warning-msg {
+  background-color: #ffeb53;
+  margin: -.3em 1em 0 1em;
+  border-radius: 5px;
+  padding: 3px;
+  color: grey; }
