--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -3,22 +3,19 @@
 * {
   font-family: 'Open Sans';
   box-sizing: border-box;
-  color: white;
   &:focus {
     outline: none;
-    box-shadow: 2px 2px 10px rgb(76, 76, 76);
   }
 }
 
 #root {
+  color: white;
   font-size: 1.2rem;
-  background: linear-gradient(160deg, #4cd0c0, #234169 90%);
+  @extend .pink-yellow-gradient;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poiret One';
-  letter-spacing: 0.1rem;
-  font-variant: small-caps;
 }
 
 h1 {
@@ -27,15 +24,12 @@ h1 {
   }
 }
 
-.pink-yellow-gradient {
-  background: linear-gradient(142deg, $pink 25%, $yellow 85%);
-}
-
 #title {
+  letter-spacing: 0.1rem;
   font-weight: 200;
   font-size: 3rem;
   font-style: italic;
-  text-shadow: 2px 2px 12px rgba(230, 0, 41, 0.8);
+  text-shadow: 2px 2px 6px rgba(230, 0, 41, 0.8);
 }
 
 .text-center {
@@ -63,38 +57,71 @@ h1 {
 }
 
 .btn {
+  color: white;
   border: 1px solid white;
   border-radius: 0.3rem;
   padding: 0.6em 1.2rem;
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.15);
-  margin-top: 1rem;
-  &:disabled {
-    background-color: rgba(130, 130, 130, 0.78);
-    border: 1px;
-  }
   &:hover {
     background-color: rgba(255, 255, 255, 0.20);
   }
 }
 
 .mobile {
+  @extend .teal-blue-gradient;
+  color: $dusty-blue;
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Sail';
+  }
+
+  .content-card {
+    background-color: white;
+    margin: 1.5rem;
+    border-radius: 5px;
+    padding: 3rem;
+  }
+
   form {
     display: flex;
     flex-direction: column;
+    background-color: white;
+    margin: 1rem;
+    border-radius: 5px;
+    padding: 1.5rem;
   }
-  input {
-    border: none;
-    color: #252525;
-    border-radius: .4rem;
-    padding: 0.6em 1.2rem;
-    font-size: 1rem;
-    margin: .5em 1rem;
+
+  .input-group {
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    text-align: left;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+
+    input {
+      border: none;
+      padding: 0.6rem 1rem;
+      border-left: 1px solid lightgrey;
+      margin-left: .9rem;
+    }
   }
+
   .btn {
-    font-size: 1rem;
-    margin: .5em 1rem;
+    background: $dusty-blue
   }
+}
+
+*::-webkit-input-placeholder {
+  color: lightgrey;
+}
+*:-moz-placeholder {
+  color: lightgrey;
+}
+*::-moz-placeholder {
+  color: lightgrey;
+}
+*:-ms-input-placeholder {
+  color: lightgrey;
 }
 
 hr.dots {
@@ -118,6 +145,7 @@ hr.dots {
   border-radius: 5px;
   margin: 1rem;
   padding: 2em 0;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .err-msg {
@@ -129,8 +157,9 @@ hr.dots {
 }
 
 .warning-msg {
-  background-color: $yellow;
-  margin: -0.1rem 1rem;
+  background-color: $pink;
   border-radius: 5px;
   padding: 3px;
+  margin: -0.5rem 0 .8rem 0px;
+  color: white;
 }
