--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,31 @@
+.teal-blue-gradient, .mobile {
+  background: linear-gradient(160deg, #4cd0c0, #396bad 90%); }
+
+.pink-yellow-gradient, #root {
+  background: linear-gradient(142deg, #ff5160 25%, #ffc86d 85%); }
+
 * {
   font-family: 'Open Sans';
-  box-sizing: border-box;
-  color: white; }
+  box-sizing: border-box; }
   *:focus {
-    outline: none;
-    box-shadow: 2px 2px 10px #4c4c4c; }
+    outline: none; }
 
 #root {
-  font-size: 1.2rem;
-  background: linear-gradient(160deg, #4cd0c0, #234169 90%); }
+  color: white;
+  font-size: 1.2rem; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poiret One';
-  letter-spacing: 0.1rem;
-  font-variant: small-caps; }
+  font-family: 'Poiret One'; }
 
 h1 + p {
   margin-top: -0.4rem; }
 
-.pink-yellow-gradient {
-  background: linear-gradient(142deg, #ff5160 25%, #ffc86d 85%); }
-
 #title {
+  letter-spacing: 0.1rem;
   font-weight: 200;
   font-size: 3rem;
   font-style: italic;
-  text-shadow: 2px 2px 12px rgba(230, 0, 41, 0.8); }
+  text-shadow: 2px 2px 6px rgba(230, 0, 41, 0.8); }
 
 .text-center {
   text-align: center; }
@@ -46,33 +46,56 @@ h1 + p {
     width: 60%; }
 
 .btn {
+  color: white;
   border: 1px solid white;
   border-radius: 0.3rem;
   padding: 0.6em 1.2rem;
   text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.15);
-  margin-top: 1rem; }
-  .btn:disabled {
-    background-color: rgba(130, 130, 130, 0.78);
-    border: 1px; }
+  background-color: rgba(255, 255, 255, 0.15); }
   .btn:hover {
     background-color: rgba(255, 255, 255, 0.2); }
 
-.mobile form {
-  display: flex;
-  flex-direction: column; }
+.mobile {
+  color: #3d81b1; }
+  .mobile h1, .mobile h2, .mobile h3, .mobile h4, .mobile h5, .mobile h6 {
+    font-family: 'Sail'; }
+  .mobile .content-card {
+    background-color: white;
+    margin: 1.5rem;
+    border-radius: 5px;
+    padding: 3rem; }
+  .mobile form {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 1rem;
+    border-radius: 5px;
+    padding: 1.5rem; }
+  .mobile .input-group {
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    text-align: left;
+    margin-bottom: 1rem;
+    padding-left: 1rem; }
+    .mobile .input-group input {
+      border: none;
+      padding: 0.6rem 1rem;
+      border-left: 1px solid lightgrey;
+      margin-left: .9rem; }
+  .mobile .btn {
+    background: #3d81b1; }
 
-.mobile input {
-  border: none;
-  color: #252525;
-  border-radius: .4rem;
-  padding: 0.6em 1.2rem;
-  font-size: 1rem;
-  margin: .5em 1rem; }
+*::-webkit-input-placeholder {
+  color: lightgrey; }
 
-.mobile .btn {
-  font-size: 1rem;
-  margin: .5em 1rem; }
+*:-moz-placeholder {
+  color: lightgrey; }
+
+*::-moz-placeholder {
+  color: lightgrey; }
+
+*:-ms-input-placeholder {
+  color: lightgrey; }
 
 hr.dots {
   color: #ffc86d;
@@ -92,7 +115,8 @@ hr.dots {
   border: 1px solid white;
   border-radius: 5px;
   margin: 1rem;
-  padding: 2em 0; }
+  padding: 2em 0;
+  background-color: rgba(255, 255, 255, 0.1); }
 
 .err-msg {
   background-color: #e2003d;
@@ -102,7 +126,8 @@ hr.dots {
   padding: .4rem; }
 
 .warning-msg {
-  background-color: #ffc86d;
-  margin: -0.1rem 1rem;
+  background-color: #ff5160;
   border-radius: 5px;
-  padding: 3px; }
+  padding: 3px;
+  margin: -0.5rem 0 .8rem 0px;
+  color: white; }
