--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -9,9 +9,8 @@
 }
 
 #root {
-  color: white;
   font-size: 1.2rem;
-  @extend .pink-yellow-gradient;
+  // color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -29,7 +28,7 @@ h1 {
   font-weight: 200;
   font-size: 3rem;
   font-style: italic;
-  text-shadow: 2px 2px 6px rgba(230, 0, 41, 0.8);
+  // text-shadow: 2px 2px 6px rgba(230, 0, 41, 0.8);
 }
 
 .text-center {
@@ -57,8 +56,8 @@ h1 {
 }
 
 .btn {
-  color: white;
-  border: 1px solid white;
+  color: black;
+  border: 1px solid black;
   border-radius: 0.3rem;
   padding: 0.6em 1.2rem;
   text-decoration: none;
@@ -113,6 +112,8 @@ h1 {
   }
 
   .btn {
+    color: white;
+    border: none;
     background: $dusty-blue
   }
 }
