--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'mobile';
 
 * {
   font-family: 'Open Sans';
@@ -10,11 +11,6 @@
 
 #root {
   font-size: 1.2rem;
-  // color: white;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poiret One';
 }
 
 h1 {
@@ -24,6 +20,7 @@ h1 {
 }
 
 #title {
+  font-family: 'Poiret One';
   letter-spacing: 0.1rem;
   font-weight: 200;
   font-size: 3rem;
@@ -67,57 +64,6 @@ h1 {
   }
 }
 
-.mobile {
-  @extend .teal-blue-gradient;
-  color: $dusty-blue;
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Sail';
-  }
-
-
-  .content-card {
-    background-color: white;
-    margin: 1.5rem;
-    border-radius: 5px;
-    padding: 3rem;
-  }
-
-  .require-mobile-card {
-    @extend .content-card;
-    margin: 0 30vw;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 1rem;
-    border-radius: 5px;
-    padding: 1.5rem;
-  }
-
-  .input-group {
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    text-align: left;
-    margin-bottom: 1rem;
-    padding-left: 1rem;
-
-    input {
-      border: none;
-      padding: 0.6rem 1rem;
-      border-left: 1px solid lightgrey;
-      margin-left: .9rem;
-    }
-  }
-
-  .btn {
-    color: white;
-    border: none;
-    background: $dusty-blue
-  }
-}
-
 *::-webkit-input-placeholder {
   color: lightgrey;
 }
@@ -132,16 +78,16 @@ h1 {
 }
 
 hr.dots {
-  color: $yellow;
+  color: $plum;
   border-width: 0 0 .4rem;
   border-style: solid;
-  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="#ffc86d" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
+  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="#6f3851" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
   width: 5rem;
   margin-top: 1.5rem;
 }
 
 .room-code {
-  color: $yellow;
+  color: $plum;
   font-weight: lighter;
   font-variant: normal;
 }
